Added media queries

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -22,7 +22,6 @@ html{
     position: relative;
 }
 body{
-    font-family: sans-serif;
     background-color: var(--bgColor1); 
     color: var(--txtColor1);
     margin-bottom: 100px;
@@ -81,7 +80,7 @@ main{
 .form-container,
 .preview-container{
     margin-top: 0.5rem;
-    width: 40rem;
+    width: 38rem;
     box-shadow: var(--shadow);
     background-color: var(--bgColor2);
     padding: 2.5rem 1.8rem;
@@ -138,17 +137,22 @@ main{
 
 /* .practical-exp */
 .form-container .practical-exp .date .fromDate,
-.form-container .practical-exp .date .toDate{
+.form-container .practical-exp .date .toDate,
+.form-container .educational-exp .date .fromDate,
+.form-container .educational-exp .date .toDate{
     width: 48%;
 }
-.form-container .practical-exp .date{
+.form-container .practical-exp .date,
+.form-container .educational-exp .date{
     display: flex;
     justify-content: space-between;
 }
-.form-container .practical-exp .delete{
+.form-container .practical-exp .delete,
+.form-container .educational-exp .delete{
     margin-bottom: 0.5rem;
 }
-.form-container .practical-exp .btn{
+.form-container .practical-exp .btn,
+.form-container .educational-exp .btn{
     width: 97.5%;
 }
 .form-container .delete:hover,
@@ -162,22 +166,6 @@ main{
     color: var(--txtColor1);
 }
 
-/* .educational-exp */
-.form-container .educational-exp .date .fromDate,
-.form-container .educational-exp .date .toDate{
-    width: 48%;
-}
-.form-container .educational-exp .date{
-    display: flex;
-    justify-content: space-between;
-}
-.form-container .educational-exp .delete{
-    margin-bottom: 0.5rem;
-}
-.form-container .educational-exp .btn{
-    width: 97.5%;
-}
-
 /* .preview-container */
 .preview-container .general-info .details{
     display: flex;
@@ -189,11 +177,12 @@ main{
 }
 .preview-container .general-info .details h4{
     color: #787575;
-    font-size: 0.9em;
+    font-size: 1em;
     font-weight: lighter;
 }
 .preview-container .general-info .details h5{
     font-size: 0.8em;
+    margin: 0.35rem 0rem;
     font-weight: lighter;
 }
 
@@ -212,14 +201,14 @@ main{
     margin: 1rem 0rem;
 }
 .preview-container .details .left-side p{
-    font-size: 0.85em;
+    font-size: 0.9em;
     margin: 0.25rem 0rem;
     color: #787575;
     font-weight: lighter;
 }
 .preview-container .details .right-side p{
     margin-top: 0.25rem;
-    font-size: 0.8em;
+    font-size: 0.85em;
 }
 .preview-container .details .right-side{
     grid-column: span 2;
@@ -256,7 +245,20 @@ footer a:hover{
 
 
 /* media queries */
-/* @media(max-width: 769px){
+@media(max-width: 769px){
+    .form-container,
+    .preview-container{
+        width: 30rem;
+    }
+    .preview-container .details .left-side p{
+        font-size: 0.8em;
+    }    
 }
 @media(max-width: 426px){
-} */
+    :root{
+        font-size: 0.6em;
+    }
+    .btn{
+        font-size: 0.9em;
+    }
+}
